microc/tests/expected/err-notdecl.uc.out
../examples/err-notdecl.uc:[2:5]: semantic error: identifier 'a' not declared
      a = 5; // error: identifier not declared
      ^

../examples/err-notdecl.uc:[4:12]: semantic error: identifier 'a' not declared
      return a; // error: identifier not declared
             ^

1
